# vf-clamp-glyphs

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  vf-clamp-glyphs.zip.sha256
.github/workflows/: ci.yml
scripts/: build-zip.sh
tests/: conftest.py  test_core_helpers.py  test_coverage_gaps.py  test_font_integration.py  test_gsfont_helpers.py
tools/: README.md  render_dialog.py  render_preview.py
vf-clamp.glyphsPlugin/Contents/: Info.plist
vf-clamp.glyphsPlugin/Contents/Resources/: LICENSE  core.py  font_registration.py  formats.py  gsfont_core.py  hull_plot.py  plugin.py  presets.py  preview_view.py
